--- a/web/jsp/prelude.jspf
+++ b/web/jsp/prelude.jspf
@@ -115,7 +115,7 @@ public Query dateQuery(String field, String date1, String date2)
     return IntPoint.newRangeQuery(field, d1, FieldInt.yearCeil(d2));
 }
 
-public Query yearQuery(Alix alix, JspTools tools) throws IOException
+public Query qYear(Alix alix, JspTools tools) throws IOException
 {
     int year1 = tools.getInt(YEAR1, Integer.MIN_VALUE);
     int year2 = tools.getInt(YEAR2, Integer.MIN_VALUE);
@@ -234,7 +234,7 @@ public Query query(Alix alix, JspTools tools, Set<String> pars) throws IOExcepti
     
     // years
     if (pars.contains(YEAR1) && pars.contains(YEAR2)) {
-        Query query = yearQuery(alix, tools);
+        Query query = qYear(alix, tools);
         if (query != null) qbuild.add(query, Occur.MUST);
     }
     
