--- a/web/jsp/prelude.jspf
+++ b/web/jsp/prelude.jspf
@@ -1,11 +1,12 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" trimDirectiveWhitespaces="true"%>
 <%-- Jsp prelude for elicom, will be include to all jsp by a web.xml conf --%>
-<%@taglib prefix="t" tagdir="/WEB-INF/tags" %>
+<%@ taglib prefix="tag" tagdir="/WEB-INF/tags" %>
 
+<%@ page import="java.io.IOException"%>
+<%@ page import="java.nio.file.*"%>
 <%@ page import="java.text.*"%>
 <%@ page import="java.util.*"%>
 <%@ page import="java.util.regex.*" %>
-<%@ page import="java.io.IOException"%>
 
 <%@ page import="org.apache.lucene.analysis.Analyzer"%>
 <%@ page import="org.apache.lucene.document.*"%>
