--- a/web/static/elicom.css
+++ b/web/static/elicom.css
@@ -49,7 +49,9 @@ form.elicom .arelation {
 
 #send-reiceive input {
     font-weight: normal;
+    /*
     background-color: var(--bglo);
+    */
 }
 
 
@@ -525,6 +527,8 @@ article.kwic div.line .receiver {
     text-align: right;
 }
 
+
+/*
 #send-reiceive ::-webkit-input-placeholder {
     color: var(--bg);
     font-style: normal;
@@ -544,6 +548,7 @@ article.kwic div.line .receiver {
     color: var(--bg);
     font-style: normal;
 }
+*/
 
 #send-reiceive input[type='text'] {
     width: 13ex;
